TRANSITION: disabled bootstrap animations to fix modal flicker on open

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 $fa-font-path: "/assets/fonts/";
 @import "~font-awesome/scss/font-awesome";
 
+$enable-transitions: false;
 @import "~bootstrap/scss/bootstrap";
 @import "~animatewithsass/animate.scss";
 
